fix &__card-icon-sub-wrap backdrop-filter

--- a/app/scss/index/_metrics.scss
+++ b/app/scss/index/_metrics.scss
@@ -70,6 +70,7 @@
     z-index: 3;
     &.blur-plate {
       background: linear-gradient(75.18deg, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.06) 100%);
+      backdrop-filter: none;
     }
     &.blur-plate::after {
       border-radius: 24px;
@@ -85,6 +86,7 @@
     border-radius: 14px;
     padding: 10px;
     &.blur-plate {
+      backdrop-filter: none;
       background: linear-gradient(75.18deg, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.06) 100%);
     }
     &.blur-plate::after {
@@ -259,6 +261,15 @@
       &--upload,
       &--latency {
         flex: 0 0 171px;
+      }
+    }
+    &__card-inner {
+      &--upload,
+      &--latency {
+        padding-top: 30px;
+      }
+      &--download {
+        padding-top: 36px;
       }
     }
     &__card-icon {
